fix: truncate file title

--- a/src/view/index.css
+++ b/src/view/index.css
@@ -23,9 +23,6 @@
   padding-left: 8px;
   margin-left: 8px;
   border-right: 1px solid lightslategray;
-  display: flex;
-  align-items: center;
-  height: 100%;
 }
 
 .pdf-viewer-container .optionBar .control {
